[INFER] Don't use loop registers for entries after coercing them to double/any for a branch, bug 682563.